opensearch/deployment.yaml
# https://docs.aws.amazon.com/ko_kr/opensearch-service/latest/developerguide/knn.html
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.13.0
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9600
          name: transport
        volumeMounts:
        - name: plugins
          mountPath: /usr/share/opensearch/plugins
        - name: opensearch-storage
          mountPath: /usr/share/opensearch/data
      volumes:
      - name: opensearch-storage
        persistentVolumeClaim:
          claimName: pvc-opensearch
      - name: plugins
        emptyDir: {}
