opensearch/node-settings.yaml
apiVersion: apps/v1
kind: DaemonSet
meta
  name: sysctl-tuning
  namespace: kube-system
  labels:
    app: sysctl-tuning
spec:
  selector:
    matchLabels:
      app: sysctl-tuning
  template:
    meta
      labels:
        app: sysctl-tuning
    spec:
      hostNetwork: true
      hostPID: true
      tolerations: # master 노드 포함 시 필요
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: sleep-container
          image: busybox:latest
          command:
            - /bin/sh
            - -c
            - sleep infinity
          resources: # Crash 방지 및 최소 자원 설정
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
